--- a/practicas/implementaciones/estructuras/abb/pom.xml
+++ b/practicas/implementaciones/estructuras/abb/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>aed</groupId>
-  <artifactId>labo5</artifactId>
+  <artifactId>abb</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>labo4</name>
